# Mecha-Fight

./: .gitignore  CMakeLists.txt  README.md  build_distributable.ps1  build_distributable.sh  build_windows.sh
configuration/: root_directory.h  root_directory.h.in
includes/: stb_image.h
includes/glad/: glad.h
includes/learnopengl/: animation.h  filesystem.h  mesh.h  model.h  model_animation.h
src/: glad.c  stb_image.cpp
src/mecha_fight/: game.cpp
src/mecha_fight/core/: Entity.h  GameWorld.cpp  GameWorld.h
src/mecha_fight/docs/: ENEMY_MODEL_SWAP_GUIDE.md
src/mecha_fight/game/: GameplayTypes.h
src/mecha_fight/game/animation/: AnimationController.cpp  AnimationController.h  AnimationState.h
src/mecha_fight/game/audio/: BackgroundMusicSystem.cpp  BackgroundMusicSystem.h  ISoundController.h  MiniaudioSoundController.cpp  MiniaudioSoundController.h  ProximitySoundSystem.cpp  ProximitySoundSystem.h  SoundManager.cpp  SoundManager.h  SoundRegistry.h
src/mecha_fight/game/camera/: ThirdPersonCamera.cpp  ThirdPersonCamera.h
src/mecha_fight/game/core/: GameInitializer.cpp  GameInitializer.h
src/mecha_fight/game/entities/: Enemy.h  EnemyDrone.cpp  EnemyDrone.h  GodzillaEnemy.cpp  GodzillaEnemy.h  MechaPlayer.cpp  MechaPlayer.h  PortalGate.cpp  PortalGate.h  TurretEnemy.cpp  TurretEnemy.h
src/mecha_fight/game/input/: InputController.cpp  InputController.h
src/mecha_fight/game/particles/: AfterimageParticleSystem.cpp  AfterimageParticleSystem.h  DashParticleSystem.cpp  DashParticleSystem.h  ParticleSystemBase.cpp  ParticleSystemBase.h  ShockwaveParticleSystem.cpp  ShockwaveParticleSystem.h  SparkParticleSystem.cpp  SparkParticleSystem.h  ThrusterParticleSystem.cpp  ThrusterParticleSystem.h
src/mecha_fight/game/placeholder/: EnemyPlaceholder.cpp  EnemyPlaceholder.h  TerrainPlaceholder.cpp  TerrainPlaceholder.h
src/mecha_fight/game/rendering/: MeshGenerator.cpp  MeshGenerator.h  ModelLoader.cpp  ModelLoader.h  RenderConstants.h  ResourceManager.cpp  ResourceManager.h  SSAORenderer.cpp  SSAORenderer.h  SceneRenderer.cpp  SceneRenderer.h  ShaderFactory.cpp  ShaderFactory.h  ShadowMapper.cpp  ShadowMapper.h  SkyboxLoader.cpp  SkyboxLoader.h
src/mecha_fight/game/systems/: MissileSystem.cpp  MissileSystem.h  ObjectiveSystem.cpp  ObjectiveSystem.h  ProjectileSystem.cpp  ProjectileSystem.h
src/mecha_fight/game/ui/: DebugTextRenderer.cpp  DebugTextRenderer.h  DeveloperOverlayUI.cpp  DeveloperOverlayUI.h  GameHUD.cpp  GameHUD.h  GameOverScreen.cpp  GameOverScreen.h  HudRenderer.cpp  HudRenderer.h  MainMenu.cpp  MainMenu.h
src/mecha_fight/shaders/: dev_text.fs  game.fs  game.vs  mecha.fs  mecha.vs  shadow.fs  shadow.vs  skybox.fs  ssao.fs  ssao_blur.fs  ssao_input.fs  ssao_input.vs  terrain.fs  terrain.vs  tree.fs  tree.vs  ui.fs  ui.vs
